src/tokenize/snapshots/wyr__tokenize__scanner__test__「「一·三五」.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value:
    Error: unterminated string.
  span:
    start: 0
    end: 17
  line: 1
- value:
    Error: "Unexpected character, maybe you need use 「」 or 『』 to wrap it."
  span:
    start: 17
    end: 20
  line: 1
- value: Eof
  span:
    start: 20
    end: 20
  line: 1

