src/tokenize/snapshots/wyr__tokenize__scanner__test__一·三五.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Number
  span:
    start: 0
    end: 11
  line: 1
- value: Eof
  span:
    start: 11
    end: 11
  line: 1

