src/tokenize/snapshots/wyr__tokenize__scanner__test__書之.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: Print
  span:
    start: 0
    end: 6
  line: 1
- value: Eof
  span:
    start: 6
    end: 6
  line: 1

