src/tokenize/snapshots/wyr__tokenize__scanner__test__若二等於二者加一以五書之云云.snap
---
source: src/tokenize/scanner.rs
expression: tokens
---
- value: If
  span:
    start: 0
    end: 3
  line: 1
- value: Number
  span:
    start: 3
    end: 6
  line: 1
- value: EqualEqual
  span:
    start: 6
    end: 12
  line: 1
- value: Number
  span:
    start: 12
    end: 15
  line: 1
- value: Conjunction
  span:
    start: 15
    end: 18
  line: 1
- value: Plus
  span:
    start: 18
    end: 21
  line: 1
- value: Number
  span:
    start: 21
    end: 24
  line: 1
- value: PrepositionRight
  span:
    start: 24
    end: 27
  line: 1
- value: Number
  span:
    start: 27
    end: 30
  line: 1
- value: Print
  span:
    start: 30
    end: 36
  line: 1
- value: YunYun
  span:
    start: 36
    end: 42
  line: 1
- value: Eof
  span:
    start: 42
    end: 42
  line: 1

